--- a/style.css
+++ b/style.css
@@ -1,9 +1,4 @@
-@font-face{
-    src: url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
-    font-family: "VT323", monospace;
-    font-weight: 400;
-    font-style: normal;
-  }
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
   
   body {
     background-color: #1b1b1b;
